--- a/neocities-carcinoj3nny/style.css
+++ b/neocities-carcinoj3nny/style.css
@@ -6,17 +6,6 @@ root {
 	--content: #EFF6FF;
 }
 
-/* if you have the URL of a font, you can set it below */
-/* feel free to delete this if it's not your vibe */
-
-/* this seems like a lot for just one font and I would have to agree 
-but I wanted to include an example of how to include a custom font.
-If you download a font file you can upload it onto your Neocities
-and then link it! Many fonts have separate files for each style
-(bold, italic, etc. T_T) which is why there are so many!
-
-*/
-
 @font-face {
 	font-family: Nunito;
 	src: url('https://sadhost.neocities.org/fonts/Nunito-Regular.ttf');
@@ -124,14 +113,18 @@ you can add them directly to the <div id="header"></div> element! */
 #navbar li a:hover {
 	color: #a49cba;
 	text-decoration: underline;
-
 		flex-wrap: wrap;
-	}
+}
 
-	aside {
-        		width: 100%                       ;
-        	}
-
+#flex {
+display: flex;
+}
+aside {
+  background-color: #E6EEED;
+  width: 200px;
+  padding: 20px;
+  font-size: smaller;
+}
 
 main {
   background-color: #E6EEED;
@@ -139,6 +132,3 @@ main {
   padding: 20px;
   order: 2;
 }
-
-}
-</style>
